--- a/jane do.css
+++ b/jane do.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 a{
     text-decoration: none;
@@ -15,12 +16,15 @@ a{
 }
 .left img{
     height: 100vh;
+    width: 40%;
     position: fixed;
 }
 .menu{
     padding:15px;
     display: flex;
     justify-content: end;
+    position: sticky;
+    top: 0;
 }
 .menu i{
     font-size: 40px;
@@ -28,16 +32,79 @@ a{
 }
 .right{
     width: 60%;
+    padding: 0 1.5rem;
 }
 .section1{
     text-align: center;
-    padding: 8rem;
+    padding: 9rem;
     line-height: 5rem;
 }
 .section1 h1{
     font-size: 80px;
 }
 .section1 a{
+    padding: 10px 15px;
+    color: black;
+    background-color: rgb(182, 181, 181);
+}
+.section2 h1{
+    font-size: 40px;
+    padding: 1.5rem 0.5rem;
+}
+.images{
+    display: flex;
+}
+.images img{
+    width: 410px;
+    margin: 0.5rem;
+}
+.section3 h1{
+    padding: 5rem 0.5rem ;
+    font-size: 40px;
+}
+.section3 p{
+    padding: 0 0.5rem;
+}
+.section4 h1{
+    padding: 3rem 0.5rem;
+    font-size: 40px;
+}
+.photo, .web, .photoshop{
+    background-color: rgb(203, 201, 201);
+    margin: 1rem 0;
+}
+.photo p{
+    background-color:gray;
+    width: 95%;
+    text-align: center;
+    padding: 0.5rem;
+    color: white;
+}
+.web p{
+    background-color:gray;
+    width: 85%;
+    text-align: center;
+    padding: 0.5rem;
+    color: white;
+}
+.photoshop p{
+    background-color:gray;
+    width: 80%;
+    text-align: center;
+    padding: 0.5rem;
+    color: white;
+}
+.section5{
+    padding: 2rem 0.5rem;
+    margin: 3rem 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    background-color: gray;
+    color: white;
+}
+.download a{
     padding: 10px 15px;
     color: black;
     background-color: rgb(182, 181, 181);
